<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:smartisanos="http://schemas.android.com/apk/res/smartisanos"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <smartisanos.widget.SettingItemSwitch
        android:id="@+id/text_boom_switch"
        style="@style/SettingSubItemSingleStyle"
        android:text="@string/text_boom"
        android:layout_marginTop="@dimen/list_transparent_header_footer"/>

    <TextView
        android:id="@+id/id_big_bang_tips"
        style="@style/SettingItemTipsStyle"/>

    <smartisanos.widget.SettingItemSwitch
        android:id="@+id/ocr_switch"
        android:text="@string/ocr_title"
        style="@style/SettingSubItemSingleStyle"/>

    <TextView
        android:id="@+id/id_ocr_tips"
        style="@style/SettingItemTipsStyle"/>

    <smartisanos.widget.SettingItemText
        android:id="@+id/textboom_trigger_area_options"
        style="@style/SettingSubItemSingleStyle"
        android:text="@string/thumb_trigger_area"/>

    <TextView
        style="@style/SettingItemTipsStyle"
        android:text="@string/thumb_trigger_area_tips"/>

    <TextView
        style="@style/SettingItemHeaderStyle"
        android:text="@string/debug_preset_text_label" />

    <Spinner
        android:id="@+id/debug_preset_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/debug_preview_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:minLines="3"
        android:gravity="top"
        android:hint="@string/debug_preview_text_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:background="@drawable/setting_sub_item_bg_single"
        android:padding="12dp" />

    <Button
        android:id="@+id/debug_preview_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/debug_preview_button" />

</LinearLayout>
